# GroundEval

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
config/: config.yaml  evaluation.yaml  events.jsonl
data/: artifacts.json
docs/: compare.md  configuration.md  crewai.md  custom-agent.md  diagram_overview.md  langgraph.md  maf.md  openai-agents.md  reports.md
examples/: README.md
examples/cybersecurity/: README.md  config.yaml  events.jsonl
examples/cybersecurity/artifacts/confluence/: CONF-301.json  CONF-302.json  CONF-303.json
examples/cybersecurity/artifacts/crowdstrike/: CS-501.json  CS-502.json  CS-601.json  CS-701.json  CS-801.json
examples/cybersecurity/artifacts/email/: EML-201.json
examples/cybersecurity/artifacts/jira/: SEC-101.json  SEC-102.json  SEC-103.json  SEC-104.json  SEC-105.json  SEC-106.json
examples/cybersecurity/artifacts/slack/: SL-401.json  SL-402.json  SL-403.json  SL-404.json
examples/cybersecurity/artifacts/splunk/: SPLK-1001.json  SPLK-1002.json  SPLK-1003.json  SPLK-1004.json  SPLK-1005.json  SPLK-1006.json
examples/enterprise-support/: README.md  config.yaml  events.jsonl
examples/enterprise-support/artifacts/confluence/: CONF-201.json  CONF-202.json  CONF-203.json  CONF-204.json
examples/enterprise-support/artifacts/git/: GIT-801.json  GIT-802.json  GIT-803.json
examples/enterprise-support/artifacts/jira/: ESC-101.json  ESC-102.json  ESC-103.json  ESC-105.json  ESC-106.json  ESC-107.json
examples/enterprise-support/artifacts/salesforce/: SF-101.json  SF-201.json  SF-301.json  (+1 more)
examples/finance/: README.md  config.yaml  events.jsonl
examples/healthcare/: README.md  config.yaml  events.jsonl
examples/legal/: README.md  config.yaml  events.jsonl
examples/tiny/: README.md  config.yaml  events.jsonl
scripts/: bootstrap_config.py  transform.py
src/groundeval/: __init__.py  __main__.py  adapters.py  compare.py  config_schema.py  core.py  diagram.py  frameworks.py  observe.py  providers.py  question_gen.py  run.py  scorers.py  task_eval.py
src/groundeval/framework_adapters/: __init__.py  crewai_adapter.py  framework_observation.py  langgraph_adapter.py  maf_adapter.py  openai_agents_adapter.py
tests/: conftest.py  test_adapters.py  test_compare.py  test_config_schema.py  test_core.py  test_diagram.py  test_observe.py  test_providers.py  test_question_gen.py  test_run.py  test_scorers.py  test_task_eval.py
tests/adapters/: test_crewai_adapter.py  test_langgraph_adapter.py  test_maf_adapter.py  test_maf_observation.py  test_openai_agents_adapter.py
tests/integration/: test_external_adapters.py
(+85 files in other folders)
